updates to README's

--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -52,14 +52,14 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="about-container">
+                        <!--<div class="about-container">
                             <div class="image-container">
                                 <img id="image-item" src="car.jpg">
                             </div>
                             <div class="content-container">
                                 Here
                             </div>
-                        </div>
+                        </div>-->
                     </div>
 
                 </div>
@@ -87,6 +87,7 @@
                             {'X': projectsBtn.position().left, 'Y': projectsBtn.position().top}
                         ];
 
+                            /*Fix later
                             $(".nav-item").hover( function ( ) {
 
                                     let brdColor = $(this).css("border-color");
@@ -100,6 +101,7 @@
                                 $(this).css("background-color", "white");
 
                             });
+                            */
 
                             $(menuBtn).click(function () {
 
